--- a/app/less/main.less
+++ b/app/less/main.less
@@ -27,6 +27,10 @@ button {
     background-color: @green;
     color: white;
     font-weight: 400;
+
+    &:hover {
+        background-color: #1c5741;
+    }
 }
 
 .container {
@@ -96,12 +100,19 @@ button {
     align-items: center;
     list-style: none;
     margin-left: auto;
+    height: 100%;
 
     a {
         color: white;
-        padding: 20px 30px;
+        padding: 28px 30px;
         font-size: 14px;
         font-weight: 400;
+        line-height: 0;
+        //background-color: #1c5741;
+
+        &:hover {
+            background-color: #1c5741;
+        }
     }
 }
 
@@ -120,6 +131,10 @@ button {
     border: none;
     padding: 17px 30px;
     background-color: @green;
+
+    &:hover {
+        background-color: #1c5741;
+    }
 
     img {
         width: 18px;
@@ -186,9 +201,16 @@ button {
     transition: 0.1s;
 
     &:active {
-        box-shadow: 0 2px 0 0 #2c7258;
-        transform: translateY(3px);
+        box-shadow: 0 0px 0 0 #2c7258;
+        transform: translateY(5px);
+        background-color: #2c7258;
     }
+
+    // &:hover {
+    //     box-shadow: 0 0px 0 0 #2c7258;
+    //     transform: translateY(5px);
+    //     background-color: #2c7258;
+    // }
 }
 
 .section-title {
@@ -377,6 +399,11 @@ button {
         url(../img/prices__bg__right-1.png) top right,
         url(../img/prices__bg__right-2.png) right 80%, #e9f2eb;
     background-repeat: no-repeat;
+
+    .btn__noborderradius {
+        max-width: 230px;
+        margin-top: 67px;
+    }
 }
 
 .section-desc {
@@ -406,6 +433,11 @@ button {
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
+
+    .btn__noborderradius {
+        max-width: 180px;
+        width: 180px;
+    }
 }
 
 .prices__item__title {
@@ -432,6 +464,25 @@ button {
     text-align: center;
     color: white;
     margin-top: 5px;
+}
+
+.btn__noborderradius {
+    padding: 11px 20px;
+    display: block;
+    background-color: @green;
+    font-weight: 700;
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 0 auto;
+    margin-top: 15px;
+    box-shadow: 0 6px 16px 4px rgba(9, 173, 112, 0.2);
+    cursor: pointer;
+
+    &:hover {
+        background-color: #1c5741;
+        box-shadow: none;
+    }
 }
 
 .prices__item__btn {
@@ -505,6 +556,13 @@ button {
         .contacts__item__desc {
             margin-top: 7px;
         }
+    }
+
+    .btn__noborderradius {
+        font-size: 14px;
+        margin-top: 17px;
+        display: inline-block;
+        text-transform: none;
     }
 }
 
@@ -1055,4 +1113,65 @@ button {
     font-weight: 400;
     text-align: center;
     margin-top: 10px;
+}
+
+.page__head {
+    background-image: url(../img/page__head__bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 40px 0 50px 0;
+}
+
+.bredcrumbs {
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+
+    a {
+        color: #adbbb0;
+        font-size: 14px;
+    }
+}
+
+.bredcrumbs__separator {
+    color: #adbbb0;
+    margin: 0 5px;
+    font-size: 14px;
+}
+
+.page__head__title {
+    font-size: 36px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: white;
+    margin-top: 10px;
+}
+
+.page__head__btnblock {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.page__head__btn {
+    font-size: 12px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    box-shadow: 0 6px 16px 4px rgba(9, 173, 112, 0.2);
+    background-color: #398c6d;
+    padding: 16px 20px;
+    border: none;
+}
+
+.page__head__social {
+    display: flex;
+    align-items: center;
+
+    a {
+        margin-left: 20px;
+        line-height: 0;
+    }
 }
