--- a/app/less/main.less
+++ b/app/less/main.less
@@ -401,6 +401,7 @@ button {
     background-repeat: no-repeat;
 
     .btn__noborderradius {
+        margin: 0 auto;
         max-width: 230px;
         margin-top: 67px;
     }
@@ -437,6 +438,7 @@ button {
     .btn__noborderradius {
         max-width: 180px;
         width: 180px;
+        margin-top: 15px;
     }
 }
 
@@ -467,6 +469,7 @@ button {
 }
 
 .btn__noborderradius {
+    border: none;
     padding: 11px 20px;
     display: block;
     background-color: @green;
@@ -474,8 +477,8 @@ button {
     color: white;
     text-align: center;
     text-transform: uppercase;
-    margin: 0 auto;
-    margin-top: 15px;
+    //margin: 0 auto;
+    //margin-top: 15px;
     box-shadow: 0 6px 16px 4px rgba(9, 173, 112, 0.2);
     cursor: pointer;
 
