--- a/app/less/main.less
+++ b/app/less/main.less
@@ -99,6 +99,25 @@ button {
         position: relative;
     }
 }
+.head__logo {
+    line-height: 0;
+    display: block;
+}
+.navbar__hamburger {
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+    * {
+        color: white;
+    }
+    img {
+        margin-right: 10px;
+    }
+}
+.navbar__hamburger__text {
+    font-size: 13px;
+    font-weight: 400;
+}
 
 .navbar__links {
     display: flex;
@@ -327,7 +346,7 @@ button {
 .plus__items {
     margin-top: 43px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     grid-gap: 20px;
 }
 
@@ -848,6 +867,7 @@ button {
     grid-template-columns: repeat(auto-fill, minmax(288px, 0));
     grid-gap: 14px;
     margin-top: 16px;
+    position: relative;
 }
 
 .formblock__main__form__btn {
@@ -1190,6 +1210,9 @@ button {
     background-size: cover;
     padding: 40px 0 50px 0;
     position: relative;
+    * {
+        position: relative;
+    }
 
     &:before {
         content: "";
@@ -1217,6 +1240,7 @@ button {
     display: flex;
     align-items: center;
     list-style-type: none;
+    flex-wrap: wrap;
 
     a {
         color: #adbbb0;
@@ -1465,6 +1489,7 @@ p.page__textblock__title {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
     grid-gap: 20px;
+    width: 100%;
 }
 .page__tableblock__table {
     border-collapse: collapse;
@@ -1562,6 +1587,9 @@ p.page__textblock__title {
     * {
         color: white;
     }
+}
+.contacts__map {
+    min-height: 228px;
 }
 .contacts__mapblock__contacts__city {
     font-size: 20px;
@@ -1680,4 +1708,80 @@ p.page__textblock__title {
     display: inline-block;
     margin-top: 30px;
     margin-bottom: 200px;
+}
+
+.mobile__nav__wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+    overflow-y: auto;
+    min-height: 100vh;
+    background-color: #13221d;
+    display: none;
+}
+.page__tableblock__table__wrapper {
+    overflow-x: auto;
+    width: 100%;
+}
+.page__tableblock__table {
+    width: 100%;
+}
+.mobile__nav {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
+    justify-items: center;
+    align-items: start;
+    grid-gap: 40px;
+    padding: 40px 30px;
+}
+.mobile__nav__close {
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding: 20px;
+}
+.mobile__nav__links {
+    text-align: center;
+    list-style-type: none;
+    color: white;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
+    grid-gap: 15px;
+    a {
+        color: white;
+        font-size: 14px;
+    }
+}
+.mobile__nav__contacts {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
+    grid-gap: 20px;
+    justify-items: center;
+    align-items: start;
+}
+.mobile__nav__contact {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
+    justify-items: center;
+    grid-gap: 10px;
+    text-align: center;
+    color: white;
+}
+.mobile__nav__contact__title {
+    font-size: 12px;
+}
+.mobile__nav__socials {
+    display: grid;
+    //grid-template-columns: repeat(auto-fill, minmax(max-content, 0));
+    grid-template-columns: max-content max-content max-content;
+    grid-gap: 20px;
+    //justify-items: center;
+    //align-items: center;
 }
