--- a/app/less/_media__1000px.less
+++ b/app/less/_media__1000px.less
@@ -387,4 +387,10 @@
             text-align: left;
         }
     }
+    .head__logo {
+        display: block;
+    }
+    .navbar__hamburger {
+        display: flex;
+    }
 }
