--- a/app/less/main.less
+++ b/app/less/main.less
@@ -102,11 +102,13 @@ button {
 .head__logo {
     line-height: 0;
     display: block;
+    display: none;
 }
 .navbar__hamburger {
     display: flex;
     align-items: center;
     padding: 10px 20px;
+    display: none;
     * {
         color: white;
     }
