--- a/docs/css/media.css
+++ b/docs/css/media.css
@@ -408,6 +408,13 @@
   .sertificates .section-title {
     text-align: left;
   }
+  .head__logo {
+    display: block;
+  }
+  .navbar__hamburger {
+    display: -webkit-box;
+    display: flex;
+  }
 }
 @media screen and (max-width: 500px) {
   .hero__img img {
