--- a/app/less/_media__1000px.less
+++ b/app/less/_media__1000px.less
@@ -277,6 +277,7 @@
     .footer__phoneblock {
         margin-bottom: 20px;
     }
+
     .footer__bottom {
         flex-direction: column;
     }
@@ -392,5 +393,9 @@
     }
     .navbar__hamburger {
         display: flex;
+    }
+    .footer__phoneblock .btn__small__border {
+        font-size: 10px;
+        padding: 10px 12px;
     }
 }
