--- a/docs/css/_media__1000px.css
+++ b/docs/css/_media__1000px.css
@@ -402,4 +402,8 @@
     display: -webkit-box;
     display: flex;
   }
+  .footer__phoneblock .btn__small__border {
+    font-size: 10px;
+    padding: 10px 12px;
+  }
 }
