--- a/app/css/_media__1000px.css
+++ b/app/css/_media__1000px.css
@@ -1,4 +1,14 @@
 @media screen and (max-width: 1000px) {
+  .contacts__items {
+    grid-template-columns: 100%;
+  }
+  .contacts__map__title {
+    position: initial;
+    margin-bottom: 18px;
+  }
+  .steps__item__arrow:before {
+    display: none;
+  }
   .navbar__logo {
     display: none;
   }
@@ -329,7 +339,6 @@
   .page__head__social a {
     margin-right: 20px;
     margin-left: 0;
-    margin-top: 20px;
   }
   .page__head__pattern {
     background-image: url(../img/page__head__bg__mobile.png);
@@ -405,5 +414,8 @@
   .footer__phoneblock .btn__small__border {
     font-size: 10px;
     padding: 10px 12px;
+  }
+  .steps__item__arrow {
+    display: none;
   }
 }
