--- a/app/css/media.css
+++ b/app/css/media.css
@@ -12,6 +12,16 @@
   }
 }
 @media screen and (max-width: 1000px) {
+  .contacts__items {
+    grid-template-columns: 100%;
+  }
+  .contacts__map__title {
+    position: initial;
+    margin-bottom: 18px;
+  }
+  .steps__item__arrow:before {
+    display: none;
+  }
   .navbar__logo {
     display: none;
   }
@@ -342,7 +352,6 @@
   .page__head__social a {
     margin-right: 20px;
     margin-left: 0;
-    margin-top: 20px;
   }
   .page__head__pattern {
     background-image: url(../img/page__head__bg__mobile.png);
@@ -418,6 +427,9 @@
   .footer__phoneblock .btn__small__border {
     font-size: 10px;
     padding: 10px 12px;
+  }
+  .steps__item__arrow {
+    display: none;
   }
 }
 @media screen and (max-width: 500px) {
