--- a/app/less/main.less
+++ b/app/less/main.less
@@ -10,11 +10,13 @@
     outline: none;
     box-sizing: border-box;
 }
+
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
+
 a {
     color: @green;
 }
@@ -42,7 +44,68 @@ button {
     padding: 0 30px;
     margin: 0 auto;
 }
+.form {
+    margin-top: 10px;
+    display: flex;
+    //flex-direction: column;
+    //align-items: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
 
+    label {
+        font-size: 12px;
+        font-weight: 400;
+        color: #949494;
+        text-align: left;
+        width: 100%;
+        padding-left: 10px;
+    }
+
+    input {
+        width: 100%;
+        font-size: 14px;
+        padding: 10px 12px;
+        margin-top: 3px;
+        border: 1px solid #85baa6;
+
+        &::-webkit-input-placeholder {
+            font-style: italic;
+            color: #ccdcd6;
+        }
+
+        &::-moz-placeholder {
+            font-style: italic;
+            color: #ccdcd6;
+        }
+
+        /* Firefox 19+ */
+        &:-moz-placeholder {
+            font-style: italic;
+            color: #ccdcd6;
+        }
+
+        /* Firefox 18- */
+        &:-ms-input-placeholder {
+            font-style: italic;
+            color: #ccdcd6;
+        }
+    }
+
+    button {
+        font-size: 13px;
+        font-weight: 700;
+        padding: 11px 22px;
+        max-width: 190px;
+        width: 190px;
+        text-transform: uppercase;
+        background-color: #398c6d;
+        color: white;
+        border: none;
+        box-shadow: 0 6px 16px 4px rgba(9, 173, 112, 0.2);
+        margin: 0 auto;
+    }
+}
 .head {
     padding: 7px 0;
 
@@ -99,23 +162,28 @@ button {
         position: relative;
     }
 }
+
 .head__logo {
     line-height: 0;
     display: block;
     display: none;
 }
+
 .navbar__hamburger {
     display: flex;
     align-items: center;
     padding: 10px 20px;
     display: none;
+
     * {
         color: white;
     }
+
     img {
         margin-right: 10px;
     }
 }
+
 .navbar__hamburger__text {
     font-size: 13px;
     font-weight: 400;
@@ -431,6 +499,7 @@ button {
         margin-top: 67px;
     }
 }
+
 .sertificates {
     padding: 60px 0;
     background: url(../img/prices__bg__left-1.png) 0% 45%,
@@ -439,6 +508,7 @@ button {
         url(../img/prices__bg__right-2.png) right 80%, #e9f2eb;
     background-repeat: no-repeat;
 }
+
 .section-desc {
     margin-top: 19px;
 
@@ -454,6 +524,7 @@ button {
     grid-gap: 20px;
     grid-row-gap: 18px;
     margin-top: 32px;
+
     &.sertificates__items {
         margin-top: 46px;
     }
@@ -793,33 +864,41 @@ button {
     .section-title {
         color: white;
     }
+
     &.nop {
         padding: 0;
+
         .formblock__main {
             background: none;
             padding: 45px 0;
             padding-right: 383px;
         }
+
         .formblock__main__title {
             color: white;
             text-transform: uppercase;
         }
+
         .formblock__main__form__item input {
             background: none;
             border: 2px solid #ffffff;
             color: white;
         }
+
         .formblock__main__form__item label {
             color: white;
         }
+
         .formblock__main__politics {
             color: white;
             font-style: italic;
             font-weight: 300;
         }
+
         .formblock__main__politics a {
             color: white;
         }
+
         .formblock__main__form__btn button {
             padding: 12.5px 22px;
         }
@@ -847,6 +926,7 @@ button {
     align-items: flex-end;
     justify-content: center;
     padding-bottom: 10px;
+
     &.nop {
         padding-bottom: 0;
         justify-content: flex-end;
@@ -1055,6 +1135,7 @@ button {
             font-size: 12px;
             font-weight: bold;
             text-decoration: underline;
+
             &:hover {
                 color: white;
             }
@@ -1068,6 +1149,7 @@ button {
             height: 16px;
             width: auto;
         }
+
         &:hover {
             svg {
                 path {
@@ -1119,69 +1201,6 @@ button {
     cursor: pointer;
 }
 
-.form {
-    margin-top: 10px;
-    display: flex;
-    //flex-direction: column;
-    //align-items: center;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 10px;
-
-    label {
-        font-size: 12px;
-        font-weight: 400;
-        color: #949494;
-        text-align: left;
-        width: 100%;
-        padding-left: 10px;
-    }
-
-    input {
-        width: 100%;
-        font-size: 14px;
-        padding: 10px 12px;
-        margin-top: 3px;
-        border: 1px solid #85baa6;
-
-        &::-webkit-input-placeholder {
-            font-style: italic;
-            color: #ccdcd6;
-        }
-
-        &::-moz-placeholder {
-            font-style: italic;
-            color: #ccdcd6;
-        }
-
-        /* Firefox 19+ */
-        &:-moz-placeholder {
-            font-style: italic;
-            color: #ccdcd6;
-        }
-
-        /* Firefox 18- */
-        &:-ms-input-placeholder {
-            font-style: italic;
-            color: #ccdcd6;
-        }
-    }
-
-    button {
-        font-size: 13px;
-        font-weight: 700;
-        padding: 11px 22px;
-        max-width: 190px;
-        width: 190px;
-        text-transform: uppercase;
-        background-color: #398c6d;
-        color: white;
-        border: none;
-        box-shadow: 0 6px 16px 4px rgba(9, 173, 112, 0.2);
-        margin: 0 auto;
-    }
-}
-
 .form__politics {
     font-size: 12px;
     font-weight: 400;
@@ -1212,6 +1231,7 @@ button {
     background-size: cover;
     padding: 40px 0 50px 0;
     position: relative;
+
     * {
         position: relative;
     }
@@ -1248,6 +1268,7 @@ button {
         color: #adbbb0;
         font-size: 14px;
     }
+
     &.bredcrumbs__2 {
         margin-top: 12px;
     }
@@ -1285,12 +1306,16 @@ button {
     border: none;
 }
 
+input[data-mask="fio"] {
+    text-transform: capitalize;
+}
+
 .page__head__social {
     display: flex;
     align-items: center;
 
     a {
-        margin-left: 20px;
+        margin-right: 20px;
         line-height: 0;
     }
 }
@@ -1311,6 +1336,7 @@ button {
         font-size: 16px;
         font-weight: 300;
         color: #423e3e;
+
         &.green {
             font-weight: 400;
             color: #398c6d;
@@ -1345,12 +1371,14 @@ p.page__textblock__title {
     margin-top: 28px;
     grid-gap: 20px;
 }
+
 .page__contentblock__cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     margin-top: 28px;
     grid-gap: 20px;
 }
+
 .page__cardblock__item {
     background-color: white;
     padding: 25px;
@@ -1358,23 +1386,29 @@ p.page__textblock__title {
     font-weight: 300;
     display: flex;
     align-items: flex-start;
+
     &.column {
         flex-direction: column;
+
         .page__cardblock__item__text__wrapper {
             margin-top: 14px;
         }
+
         .page__cardblock__item__title {
             margin-bottom: 11px;
         }
     }
+
     &.green {
         background-color: #398c6d;
+
         .page__cardblock__item__title {
             color: white;
             text-transform: initial;
             font-size: 14px;
             font-weight: 700;
         }
+
         background-image: url(../img/page__cardblock__item__bg.png);
 
         background-repeat: no-repeat;
@@ -1402,6 +1436,7 @@ p.page__textblock__title {
     color: #398c6d;
     font-size: 24px;
     font-weight: 700;
+
     &.uppercase {
         text-transform: uppercase;
     }
@@ -1437,6 +1472,7 @@ p.page__textblock__title {
     font-size: 16px;
     font-weight: 300;
     line-height: 24px;
+
     &.strong {
         font-weight: 500;
     }
@@ -1470,6 +1506,7 @@ p.page__textblock__title {
     text-transform: uppercase;
     margin-bottom: 16px;
 }
+
 .page__tableblock {
     padding-bottom: 60px;
     padding-top: 44px;
@@ -1478,14 +1515,17 @@ p.page__textblock__title {
         url(../img/tableblock__bg__right.png) bottom right, #e9f2eb;
     background-repeat: no-repeat;
 }
+
 .page__tableblock__title {
     color: #398c6d;
     font-size: 24px;
     font-weight: 700;
+
     &.uppercase {
         text-transform: uppercase;
     }
 }
+
 .page__tableblock__tables {
     margin-top: 26px;
     display: grid;
@@ -1493,10 +1533,12 @@ p.page__textblock__title {
     grid-gap: 20px;
     width: 100%;
 }
+
 .page__tableblock__table {
     border-collapse: collapse;
     border-spacing: 1px;
     border-color: black;
+
     thead {
         td {
             background-color: #398c6d;
@@ -1507,6 +1549,7 @@ p.page__textblock__title {
             border: 1px solid #338264;
         }
     }
+
     tbody {
         td {
             padding: 20px 26px;
@@ -1522,20 +1565,25 @@ p.page__textblock__title {
     max-width: 300px;
     margin-right: 50px;
 }
+
 .page__textblock__slider {
     .owl-dots {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 20px;
         width: 100%;
+
         .owl-dot {
             max-width: 85px;
             display: block;
+
             img {
                 width: 100%;
             }
+
             &.active {
                 position: relative;
+
                 &:before {
                     content: "";
                     position: absolute;
@@ -1557,6 +1605,7 @@ p.page__textblock__title {
     margin-top: 30px;
     //justify-items: center;
 }
+
 .page__tableblock__card {
     background-image: url(../img/page__tableblock__card__bg.png);
     background-color: #398c6d;
@@ -1567,6 +1616,7 @@ p.page__textblock__title {
     align-items: end;
     justify-items: center;
 }
+
 .page__tableblock__card__title {
     text-align: center;
     color: white;
@@ -1575,50 +1625,68 @@ p.page__textblock__title {
 
 .contacts__mapblock {
     padding: 56px 0;
+
     .container {
         display: grid;
         grid-template-columns: auto 400px;
     }
 }
+
 .contacts__mapblock__contacts {
     padding: 40px;
     background-color: #398c6d;
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 23px;
+
     * {
         color: white;
     }
 }
+
 .contacts__map {
     min-height: 228px;
 }
+
 .contacts__mapblock__contacts__city {
     font-size: 20px;
     font-weight: 700;
 }
+
 .contacts__mapblock__contacts__list {
     list-style-type: none;
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 5px;
+
     li {
         display: flex;
         align-items: center;
+
         img {
             margin-right: 10px;
         }
     }
 }
+
 .contacts__mapblock__contacts__list__item__strong {
     font-weight: 700;
 }
+
 .contacts__requisites {
     padding: 60px 0;
     background: url(../img/contacts__requisites__bg-left.png) bottom left,
         url(../img/contacts__requisites__bg-right.png) top right, #e9f2eb;
     background-repeat: no-repeat;
+
+    .btn__noborderradius {
+        display: block;
+        margin: 0 auto;
+        width: max-content;
+        margin-top: 45px;
+    }
 }
+
 .contacts__requisites__title {
     color: #398c6d;
     font-size: 36px;
@@ -1626,6 +1694,7 @@ p.page__textblock__title {
     text-transform: uppercase;
     text-align: center;
 }
+
 .contacts__requisites__content {
     background-color: #fff;
     padding: 30px;
@@ -1633,11 +1702,13 @@ p.page__textblock__title {
     margin-top: 40px;
     max-width: 820px;
 }
+
 .contacts__requisites__content__list {
     list-style-type: none;
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 10px;
+
     li {
         .green {
             color: #398c6d;
@@ -1653,6 +1724,7 @@ p.page__textblock__title {
     background-repeat: no-repeat;
     flex-grow: 1;
 }
+
 .search__title {
     color: #398c6d;
     font-size: 36px;
@@ -1660,42 +1732,50 @@ p.page__textblock__title {
     text-transform: uppercase;
     margin-top: 20px;
 }
+
 .search__form {
     display: grid;
     grid-template-columns: auto 200px;
     margin-top: 20px;
 }
+
 .search__form__input {
     padding: 17px;
     border: none;
 }
+
 .search__results__title {
     margin-top: 24px;
     color: #398c6d;
     font-size: 24px;
     font-weight: 700;
 }
+
 .search__results__items {
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 12px;
     margin-top: 20px;
 }
+
 .search__results__item {
     background-color: #fff;
     padding: 25px;
 }
+
 .search__results__item__title {
     color: #398c6d;
     font-size: 20px;
     font-weight: 700;
 }
+
 .search__results__item__desc {
     margin-top: 10px;
     color: #423e3e;
     font-size: 16px;
     font-weight: 300;
 }
+
 .search__results__error {
     color: #232323;
     font-size: 36px;
@@ -1724,13 +1804,16 @@ p.page__textblock__title {
     background-color: #13221d;
     display: none;
 }
+
 .page__tableblock__table__wrapper {
     overflow-x: auto;
     width: 100%;
 }
+
 .page__tableblock__table {
     width: 100%;
 }
+
 .mobile__nav {
     display: grid;
     grid-template-columns: 100%;
@@ -1740,12 +1823,14 @@ p.page__textblock__title {
     grid-gap: 40px;
     padding: 40px 30px;
 }
+
 .mobile__nav__close {
     position: fixed;
     top: 0;
     right: 0;
     padding: 20px;
 }
+
 .mobile__nav__links {
     text-align: center;
     list-style-type: none;
@@ -1754,11 +1839,13 @@ p.page__textblock__title {
     grid-template-columns: 100%;
     grid-template-rows: repeat(auto-fill, minmax(max-content, 0));
     grid-gap: 15px;
+
     a {
         color: white;
         font-size: 14px;
     }
 }
+
 .mobile__nav__contacts {
     display: grid;
     grid-template-columns: 100%;
@@ -1767,6 +1854,7 @@ p.page__textblock__title {
     justify-items: center;
     align-items: start;
 }
+
 .mobile__nav__contact {
     display: grid;
     grid-template-columns: 100%;
@@ -1776,9 +1864,11 @@ p.page__textblock__title {
     text-align: center;
     color: white;
 }
+
 .mobile__nav__contact__title {
     font-size: 12px;
 }
+
 .mobile__nav__socials {
     display: grid;
     //grid-template-columns: repeat(auto-fill, minmax(max-content, 0));
@@ -1786,4 +1876,44 @@ p.page__textblock__title {
     grid-gap: 20px;
     //justify-items: center;
     //align-items: center;
+}
+
+// .steps__item__arrow {
+//     position: relative;
+
+//     &:before {
+//         content: '';
+//         display: block;
+//         position: absolute;
+//         width: 24px;
+//         height: 34px;
+//         background-image: url(../img/steps__arrow.png);
+//         background-repeat: no-repeat;
+//         background-position: center;
+//         background-size: contain;
+//         right: -33px;
+//         top: 44px;
+//     }
+// }
+.steps__item {
+    position: relative;
+}
+.steps__item__arrow {
+    position: absolute;
+    right: -33px;
+    top: 44px;
+}
+
+.contacts__map__wrapper {
+    position: relative;
+}
+
+.contacts__map__title {
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    position: absolute;
+    top: -35px;
+    text-align: center;
+    width: 100%;
 }
